# runtime-linker-audit

./: CMakeLists.txt  README.md  auditlib.c  auditor.c  license_audit.c  rpm_checker.c  rpm_checker.h  test.c
doc/: Makefile  slides.tex
include/: pipes.h  rpm_checker.h
src/: auditor.c  rpm_checker.c  test.c  testlib.c
